# Nexus-Engine

./: README.md
NexusEngine/: CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PROJECT_COMPLETION_SUMMARY.md  PROJECT_INDEX.md  QUICKSTART.md  README.md  README_NEW.md  ROADMAP.md  requirements.txt  setup.py
NexusEngine-FINAL/NexusEngine/: README.md  iniciar.bat  requirements.txt
NexusEngine-FINAL/NexusEngine/api/: main.py
NexusEngine/api/: config.py  main.py  validation.py
NexusEngine/api/middleware/: middleware.py
NexusEngine/api/models/: schemas.py
NexusEngine/api/routers/: routes.py
NexusEngine/api/services/: services.py
NexusEngine/cpp/: CMakeLists.txt
NexusEngine/cpp/include/: binary_processor.hpp  core_engine.hpp  hash_engine.hpp  lock_free_queue.hpp  matrix_engine.hpp  memory_pool.hpp  metrics_collector.hpp  plugin_loader.hpp  quantum_simulator.hpp  simd_ops.hpp  thread_pool.hpp
NexusEngine/cpp/src/: binary_processor.cpp  core_engine.cpp  hash_engine.cpp  lock_free_queue_impl.hpp  main.cpp  matrix_engine.cpp  memory_pool.cpp  metrics_collector.cpp  plugin_loader.cpp  quantum_simulator.cpp  simd_ops.cpp  thread_pool.cpp
NexusEngine/cython/: nexus_engine.pyx
NexusEngine/docker/: Dockerfile.api  Dockerfile.cpp  docker-compose.yml
NexusEngine/docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_NEW.md  BENCHMARK.md  CONCURRENCY_MODEL.md  DEPLOYMENT.md  MEMORY_MODEL.md  PERFORMANCE.md  README_COMPLETE.md  SECURITY.md  SECURITY_MODEL.md
NexusEngine/sql/: schema.py
NexusEngine/tests/: benchmark.py
(+8 files in other folders)
